# CmdDocGen

./: .env.example  .gitignore  MANIFEST.in  Makefile  README.md  cmd_doc_gen.py  llm.py  mypy.ini  process_openstack_commands.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: make-build.yaml
cmddocgen/: cli.py  cmd_doc_gen.py  llm.py
examples/cinder/: cinder.txt  cinder_absolute-limits.txt  cinder_api-version.txt  cinder_attachment-complete.txt  cinder_attachment-create.txt  cinder_attachment-delete.txt  cinder_attachment-list.txt  cinder_attachment-show.txt  cinder_attachment-update.txt  cinder_availability-zone-list.txt  cinder_backup-create.txt  cinder_backup-delete.txt  cinder_backup-export.txt  cinder_backup-import.txt  cinder_backup-list.txt  cinder_backup-reset-state.txt  cinder_backup-restore.txt  cinder_backup-show.txt  cinder_backup-update.txt  cinder_bash-completion.txt  cinder_cgsnapshot-create.txt  cinder_cgsnapshot-delete.txt  cinder_cgsnapshot-list.txt  cinder_cgsnapshot-show.txt  cinder_cluster-disable.txt  cinder_cluster-enable.txt  cinder_cluster-list.txt  cinder_cluster-show.txt  cinder_consisgroup-create-from-src.txt  cinder_consisgroup-create.txt  cinder_consisgroup-delete.txt  cinder_consisgroup-list.txt  cinder_consisgroup-show.txt  cinder_consisgroup-update.txt  cinder_create.txt  cinder_default-type-list.txt  cinder_default-type-set.txt  cinder_default-type-unset.txt  cinder_delete.txt  cinder_encryption-type-create.txt  (+111 more)
examples/docker/: docker.txt  docker_attach.man  docker_attach.txt  docker_build.man  docker_build.txt  (+112 more)
(+737 files in other folders)
